force-app/main/default/objects/Ticket_Fare_Rule__c/Ticket_Fare_Rule__c.object-meta.xml
<CustomObject>
    <label>Ticket Fare Rule</label>
    <nameField>
        <displayFormat>TF{YYYY}{MM}{00000000}</displayFormat>
        <label>Ticket Fare Rule No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Fare Rules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>