force-app/main/default/objects/Ticket_Fare_Rule__c/fields/Departing_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Departing_Flight_Number__c</fullName>
    <label>Departing Flight Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>