force-app/main/default/objects/Ticket_Fare_Rule__c/fields/Effective_Flight_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Flight_End_Date__c</fullName>
    <label>Effective Flight End Date</label>
    <type>Date</type>
</CustomField>