force-app/main/default/objects/Ticket_Fare_Rule__c/fields/Effective_Ticket_Issue_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Ticket_Issue_Start_Date__c</fullName>
    <label>Effective Ticket Issue Start Date</label>
    <type>Date</type>
</CustomField>