force-app/main/default/objects/Ticket_Fare_Rule__c/fields/Is_Sunday__c.field-meta.xml
<CustomField>
    <fullName>Is_Sunday__c</fullName>
    <label>Is Sunday</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>