force-app/main/default/objects/Ticket_Fare_Rule__c/fields/Is_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Is_Weekend__c</fullName>
    <label>Is Weekend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>