force-app/main/default/objects/Ticket_Fare_Rule__c/fields/Less_than_Minimal_No_of_Pax__c.field-meta.xml
<CustomField>
    <fullName>Less_than_Minimal_No_of_Pax__c</fullName>
    <label>Less than Minimal No of Pax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>