force-app/main/default/objects/Ticket_Fare_Rule__c/fields/Minimal_No_of_Pax__c.field-meta.xml
<CustomField>
    <fullName>Minimal_No_of_Pax__c</fullName>
    <label>Minimal No of Pax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>