force-app/main/default/objects/Ticket_Fare_Rule__c/fields/Returning_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Returning_Flight_Number__c</fullName>
    <label>Returning Flight Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>