force-app/main/default/objects/Ticket_Fare_Rule__c/fields/Tour_Code__c.field-meta.xml
<CustomField>
    <fullName>Tour_Code__c</fullName>
    <label>Tour Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>