force-app/main/default/objects/Ticket_Fare_Rule__c/fields/Unit_Price_Adult__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Adult__c</fullName>
    <label>Unit Price(Adult)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>