force-app/main/default/objects/Ticket_Fare_Rule__c/listViews/All_for_Admin.listView-meta.xml
<ListView>
    <fullName>All_for_Admin</fullName>
    <columns>NAME</columns>
    <columns>Departing_Flight_Number__c</columns>
    <columns>Returning_Flight_Number__c</columns>
    <columns>Effective_Flight_Start_Date__c</columns>
    <columns>Effective_Flight_End_Date__c</columns>
    <columns>Effective_Ticket_Issue_Start_Date__c</columns>
    <columns>Effective_Ticket_Issue_End_Date__c</columns>
    <columns>Route__c</columns>
    <columns>IATA_Code__c</columns>
    <columns>Is_Weekend__c</columns>
    <columns>Minimal_No_of_Pax__c</columns>
    <columns>Less_than_Minimal_No_of_Pax__c</columns>
    <columns>Unit_Price_Adult__c</columns>
    <columns>Unit_Price_Child__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All for Admin</label>
    <sharedTo>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>